--- a/app/globals.css
+++ b/app/globals.css
@@ -5,22 +5,56 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --font-Expletus: "Expletus Sans";
+  --font-WorkSans: "Work Sans";
+  --breakpoint-custom: 810px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: #000000;
+}
+
+.menuContainer li {
+  @apply text-[16px] text-[#fff] font-WorkSans cursor-pointer
+}
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 150px);
+  grid-gap: 10px;
+}
+
+.gridContainer .card {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  background: rgba(45,45,45,1);
+  overflow: hidden;
+}
+
+.gridContainer .card::before {
+  content: '';
+  position: absolute;
+  background: radial-gradient(var(--clr), transparent, transparent);
+  width: 300px;
+  height: 300px;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.gridContainer .card:hover::before {
+  opacity: 1;
+}
+
+.gridContainer .card::after {
+  content: '';
+  position: absolute;
+  inset: 2px;
+  background: rgba(45,45,45,0.9);
+}
+
+.heroButton {
+  box-shadow: 0 0 40px 5px rgba(228, 103, 103, .6);
 }
